<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="77dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/img_seta"
        android:layout_width="49dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/seta_verde" />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="277dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/img_seta"
        android:layout_toRightOf="@+id/img_seta"
        android:text="@string/descricao"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_seta"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-21dp"
        android:text="@string/dia" />

    <TextView
        android:id="@+id/valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/valor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mostra_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/descricao"
        android:layout_alignLeft="@+id/descricao"
        android:layout_alignTop="@+id/descricao"
        android:layout_alignEnd="@+id/descricao"
        android:layout_alignRight="@+id/descricao"
        android:layout_alignBottom="@+id/descricao"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:layout_marginBottom="3dp" />

</RelativeLayout>